# Connect4_cv

./: *R:Connect4_cv*  .Rhistory  .gitignore  CMakeLists.txt  README.md  R_script.r  a.r  c4_cv_capture  c4_cv_config  c4_cv_ip_cam  c4_cv_ut  p.py  run_test.sh  save.cvconf
exec/: capture.cpp  config.cpp  ip_cam.cpp
img/: README.md
img/nao_blue_1.2M/: image_a1.jpg.xmp
include/: Cv_c4.hpp  Cv_c4_optim.hpp  Cv_c4_option.hpp  Cv_c4_option_helper.hpp
src/: Cv_c4.cpp  Cv_c4_optim.cpp  Cv_c4_option.cpp  Cv_c4_option_helper.cpp  display_image.cpp
test/: test.cpp
